k8s/objectstore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: objectstore-api
  labels:
    app: objectstore
spec:
  selector:
    app: objectstore
  ports:
  - name: api
    port: 9000
    targetPort: api
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: objectstore-console
  labels:
    app: objectstore
spec:
  selector:
    app: objectstore
  ports:
  - name: console
    port: 9001
    targetPort: console
    protocol: TCP
  type: ClusterIP
