k8s/objectstore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: objectstore
  labels:
    app: objectstore
spec:
  rules:
  - host: objectstore-api.docker.localhost
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
              service:
                name: objectstore-api
                port:
                  name: api
  - host: objectstore-console.docker.localhost
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
              service:
                name: objectstore-console
                port:
                  name: console
